--- a/Shnoozle/Base.lproj/Main.storyboard
+++ b/Shnoozle/Base.lproj/Main.storyboard
@@ -426,7 +426,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view alpha="0.49999999999999983" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mIS-8r-Mih" userLabel="recordButtonView">
-                                <rect key="frame" x="107" y="476" width="160" height="160"/>
+                                <rect key="frame" x="107" y="396" width="160" height="160"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cyq-F8-yXU" userLabel="recordButton">
                                         <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
@@ -467,7 +467,7 @@
                                 </connections>
                             </switch>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="csG-ze-pVa" userLabel="playView">
-                                <rect key="frame" x="107" y="476" width="160" height="160"/>
+                                <rect key="frame" x="107" y="396" width="160" height="160"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6lH-0n-gCy" userLabel="playButton">
                                         <rect key="frame" x="0.0" y="0.0" width="160" height="160"/>
@@ -478,28 +478,59 @@
                                             <action selector="playButtonTapped:" destination="FjB-k4-snd" eventType="touchUpInside" id="ow4-sC-VFG"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="play.png" translatesAutoresizingMaskIntoConstraints="NO" id="59J-Pk-UOX">
-                                        <rect key="frame" x="40" y="46" width="80" height="80"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play.png" translatesAutoresizingMaskIntoConstraints="NO" id="59J-Pk-UOX">
+                                        <rect key="frame" x="45" y="45" width="69" height="69"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="69" id="EOp-2K-BwB"/>
+                                            <constraint firstAttribute="height" constant="69" id="s6t-d1-X6X"/>
+                                        </constraints>
                                     </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QiS-Rh-PU0">
+                                        <rect key="frame" x="30" y="20" width="16" height="16"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="16" id="KUW-G7-4mf"/>
+                                            <constraint firstAttribute="height" constant="16" id="cVD-iH-LxU"/>
+                                        </constraints>
+                                        <state key="normal" image="close.png">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="playCloseTapped:" destination="FjB-k4-snd" eventType="touchUpInside" id="hDU-bt-UZk"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.36455870555491077" green="0.76804551127214471" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="6lH-0n-gCy" firstAttribute="width" secondItem="csG-ze-pVa" secondAttribute="width" id="EAg-ix-1Rm"/>
                                     <constraint firstItem="6lH-0n-gCy" firstAttribute="top" secondItem="csG-ze-pVa" secondAttribute="top" id="Smj-S4-r7m"/>
+                                    <constraint firstItem="QiS-Rh-PU0" firstAttribute="leading" secondItem="csG-ze-pVa" secondAttribute="leading" constant="30" id="XRt-YB-qd0"/>
+                                    <constraint firstAttribute="centerY" secondItem="59J-Pk-UOX" secondAttribute="centerY" id="XWI-OC-ARV"/>
                                     <constraint firstItem="6lH-0n-gCy" firstAttribute="leading" secondItem="csG-ze-pVa" secondAttribute="leading" id="ZPg-wf-TUE"/>
                                     <constraint firstItem="6lH-0n-gCy" firstAttribute="height" secondItem="csG-ze-pVa" secondAttribute="height" id="pnf-IH-X08"/>
+                                    <constraint firstItem="QiS-Rh-PU0" firstAttribute="top" secondItem="csG-ze-pVa" secondAttribute="top" constant="20" id="rdK-O6-uGw"/>
+                                    <constraint firstAttribute="centerX" secondItem="59J-Pk-UOX" secondAttribute="centerX" id="vq6-Bp-AUb"/>
                                 </constraints>
                             </view>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rS5-Gt-l1l">
+                                <rect key="frame" x="126" y="575" width="123" height="50"/>
+                                <color key="backgroundColor" red="0.43002809606570813" green="1" blue="0.53471858002214256" alpha="0.67000000000000004" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Send">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendToParse:" destination="FjB-k4-snd" eventType="touchUpInside" id="Vl5-Nv-bFP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.29458390961369507" green="0.20811310825051205" blue="0.97236032196969702" alpha="0.64000000000000001" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="csG-ze-pVa" secondAttribute="centerX" id="02q-pf-4aZ"/>
                             <constraint firstItem="ATp-ag-qPu" firstAttribute="leading" secondItem="aBo-s0-XUj" secondAttribute="leading" id="6zy-YG-LYK"/>
-                            <constraint firstAttribute="centerY" secondItem="csG-ze-pVa" secondAttribute="centerY" multiplier="0.6" id="BFf-6s-PQc"/>
+                            <constraint firstAttribute="centerY" secondItem="csG-ze-pVa" secondAttribute="centerY" multiplier="0.7" id="BFf-6s-PQc"/>
                             <constraint firstItem="mIS-8r-Mih" firstAttribute="width" secondItem="csG-ze-pVa" secondAttribute="width" id="Flt-D9-Nxg"/>
                             <constraint firstAttribute="trailing" secondItem="ATp-ag-qPu" secondAttribute="trailing" id="HS9-J5-6Ss"/>
                             <constraint firstItem="ATp-ag-qPu" firstAttribute="top" secondItem="Noy-8Y-AGT" secondAttribute="bottom" id="PLH-FH-p51"/>
-                            <constraint firstAttribute="centerY" secondItem="mIS-8r-Mih" secondAttribute="centerY" multiplier="0.6" id="Vpe-K5-LfQ"/>
+                            <constraint firstAttribute="centerY" secondItem="mIS-8r-Mih" secondAttribute="centerY" multiplier="0.7" id="Vpe-K5-LfQ"/>
                             <constraint firstAttribute="centerX" secondItem="mIS-8r-Mih" secondAttribute="centerX" id="c2c-Y8-MZ5"/>
                             <constraint firstItem="G7J-u0-A2w" firstAttribute="top" secondItem="ATp-ag-qPu" secondAttribute="bottom" id="dV0-BP-gSq"/>
                             <constraint firstItem="mIS-8r-Mih" firstAttribute="height" secondItem="csG-ze-pVa" secondAttribute="height" id="xn9-QL-mh1"/>
@@ -536,6 +567,7 @@
                         <outlet property="recordButton" destination="Cyq-F8-yXU" id="fr7-KV-Xos"/>
                         <outlet property="recordView" destination="mIS-8r-Mih" id="DYa-Bh-msr"/>
                         <outlet property="selectedTimeLabel" destination="e7j-x9-NZH" id="OPH-ZK-6jv"/>
+                        <outlet property="sendToParseButton" destination="rS5-Gt-l1l" id="0tA-Hr-KDd"/>
                         <outlet property="titleLabel" destination="bJy-OJ-6mB" id="rGo-gI-W8f"/>
                         <segue destination="r5R-Zs-RqR" kind="popoverPresentation" identifier="playMemo" popoverAnchorView="WHx-eQ-5d8" id="hUC-yl-tsB">
                             <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
@@ -750,6 +782,7 @@
         <image name="MenuBackground.png" width="520" height="768"/>
         <image name="Stars.png" width="320" height="568"/>
         <image name="alarm.png" width="32" height="32"/>
+        <image name="close.png" width="128" height="128"/>
         <image name="fb.png" width="32" height="32"/>
         <image name="menu.png" width="16" height="16"/>
         <image name="mic.png" width="256" height="256"/>
